...
      title: 'Exercise Shuffle',
      screen: 'ExerciseShuffleStart' as keyof RootStackParamList,
      icon: '🎲',
      exerciseType: null,
    },
    {
      title: 'Match Words',
      screen: 'TopicSelection' as keyof RootStackParamList,
      icon: '🎯',
      exerciseType: 'pairs',
    },
    {
      title: 'Conversations',
      screen: 'TopicSelection' as keyof RootStackParamList,
      icon: '💬',
      exerciseType: 'conversation',
    },
    {
      title: 'Translate',
      screen: 'TopicSelection' as keyof RootStackParamList,
      icon: '📝',
      exerciseType: 'translation',
    },
    {
      title: 'Fill in the Blank',
...
      <StatusBar
        backgroundColor={theme.colors.primary}
        barStyle="light-content"
      />
      <View style={styles.container}>
        <View style={styles.header}>
          <Text style={styles.title} testID="app-title">
            AHLingo
          </Text>
          <View style={styles.settingsButton}>
            <HeaderIconButton
              onPress={() => navigation.navigate('Settings')}
              icon="⚙️"
...
